--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,18 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          secret-key: ${JWT_ACCESS_TOKEN_SECRET}
 appDescription: "Plazoleta System"
 appVersion: "1.0"
 
 server:
-  port: 8081
-  servlet:
-    context-path: /plazoletaSystem/api/v1
+  port: 8082
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8099/eureka/
